--- a/example1/index.html
+++ b/example1/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BLE</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.sound.min.js"></script>
@@ -12,6 +13,7 @@
   <body>
     <button onClick="connect()">Connect</button>
     <button onClick="startNotify()">Start Notifications</button>
+    <button onClick="disconnect()">Disconnect</button>
     <script src="main.js"></script>
   </body>
 </html>
