added star background

--- a/example1/index.html
+++ b/example1/index.html
@@ -14,6 +14,8 @@
     <button onClick="connect()">Connect</button>
     <button onClick="startNotify()">Start Notifications</button>
     <button onClick="disconnect()">Disconnect</button>
+    <script src="star.js"></script>
+    <script src="ble.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
